# ADMLIV

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: methodology.md  overview.md
docs/api/: admliv.md  estimators.md  featurizers.md  moments.md  pgmm.md
examples/: 01_hd_linear_regression.ipynb  02_hd_linear_iv.ipynb  03_demand_estimation.ipynb
replication/: README.md
replication/demand_model/elasticities/: hyperparameters_mc.txt  mc_elasticity_logit.py  mc_elasticity_logit_serial.py  run_mc_elasticity_serial.sh  summarize_elasticity_results.py
replication/demand_model/utils/: __init__.py  admliv_elasticity.py  em_basis_featurizer.py  omega_transformer.py  own_price_elasticity.py  pgmm_elasticity.py  raw_data.py
replication/linear_iv_model/: hyperparameters.txt  mc_hd_linear_iv.py  summarize_hd_linear_iv_results.py
replication/linear_model/: hyperparameters.txt  mc_hd_linear.py  summarize_hd_linear_results.py
replication/linear_model/utils/: __init__.py  control.py  rmd_lasso.py  rmd_lasso_cv.py
replication/toy_model/: hyperparameters.txt  mc_wad.py  mc_wad_serial.py  run_mc_wad.sh  run_mc_wad_serial.sh  summarize_wad_results.py
replication/toy_model/utils/: __init__.py  dml_analytical_ad.py  rr_ad_analytical.py
src/admliv/: __init__.py
src/admliv/core/: __init__.py  control.py  (+4 more)
tests/test_admliv/: __init__.py  test_admliv.py  test_admliv_nonlinear.py
tests/test_moments/: test_compute.py  test_compute_all.py
tests/test_pgmm/: test_pgmm.py  test_pgmm_cv.py  test_pgmm_linear_iv.py  test_pgmm_linear_iv_cv.py
(+15 files in other folders)
