[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admliv"
version = "0.1.0"
description = "Automatic Debiased Machine Learning for Instrumental Variables"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Edvard Bakhitov"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "numba>=0.55",
    "joblib>=1.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/ebakhitov/admliv"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
